--- a/src/app/components/attribute-dictionary/attribute-dictionary-list/attribute-dictionary-list.component.html
+++ b/src/app/components/attribute-dictionary/attribute-dictionary-list/attribute-dictionary-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="inner">
-        <h4>Attribute Dictionary</h4>
+        <h2>Attribute Dictionary</h2>
         <table class="table table-striped table-dark table-hover">
           <thead>
             <tr>
@@ -14,8 +14,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr
-              *ngFor="
+            <tr *ngFor="
                 let attributeDictionary of attributeDictionaryList
                   | paginate
                     : {
@@ -23,61 +22,30 @@
                         itemsPerPage: 5,
                         currentPage: page
                       }
-              "
-            >
+              ">
               <td>{{ attributeDictionary.id }}</td>
               <td>{{ attributeDictionary.name }}</td>
               <td>{{ attributeDictionary.category }}</td>
               <td>{{ attributeDictionary.type }}</td>
               <td>{{ attributeDictionary.component }}</td>
               <td>
-                <div
-                  class="btn-group"
-                  role="group"
-                  aria-label="attributeDictionary-operations"
-                >
-                  <button
-                    type="button"
-                    class="btn btn-success btn-sm move-right"
-                    id="edit-attributeDictionary"
-                    (click)="EditForm(attributeDictionary)"
-                  >
-                    Edit
-                  </button>
-                  <button
-                    type="button"
-                    id="delete-attributeDictionary"
-                    class="btn btn-danger btn-sm"
-                    (click)="deleteAttributeDictionary(attributeDictionary.id)"
-                  >
-                    Delete
-                  </button>
-                  <button
-                    type="button"
-                    id="clone-attributeDictionary"
-                    class="btn btn-info btn-sm"
-                    (click)="CloneAttributeDictionary(attributeDictionary.id)"
-                  >
-                    Clone
-                  </button>
+                <div class="btn-group" role="group" aria-label="attributeDictionary-operations">
+                  <button type="button" class="btn btn-success btn-sm move-right" id="edit-attributeDictionary"
+                    (click)="EditForm(attributeDictionary)"> Edit </button>
+                  <button type="button" id="delete-attributeDictionary" class="btn btn-danger btn-sm"
+                    (click)="deleteAttributeDictionary(attributeDictionary.id)"> Delete </button>
+                  <button type="button" id="clone-attributeDictionary" class="btn btn-info btn-sm"
+                    (click)="CloneAttributeDictionary(attributeDictionary.id)"> Clone </button>
                 </div>
               </td>
             </tr>
           </tbody>
         </table>
-        <button
-          type="button"
-          class="btn btn-success btn-sm move-right mb-3"
-          (click)="AddForm()"
-        >
-          <i class="bi bi-plus-lg"></i> Add
-        </button>
+        <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddForm()">
+          <i class="bi bi-plus-lg"></i> Add </button>
       </div>
     </div>
   </div>
-  <pagination-controls
-    (pageChange)="page = $event"
-    id="attributeDictionaryPagination"
-  ></pagination-controls>
+  <pagination-controls (pageChange)="page = $event" id="attributeDictionaryPagination"></pagination-controls>
 </div>
 <app-log [component]="component"></app-log>
