--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,8 +38,8 @@
         >Models</a
       >
       <a
-        class="nav-link disabled"
-        routerLink="/device-types"
+        class="nav-link"
+        routerLink="/attribute-list"
         routerLinkActive="active"
         ariaCurrentWhenActive="page"
         >Attributes</a
