--- a/src/app/components/attribute-dictionary/attribute-dictionary-list/attribute-dictionary-list.component.html
+++ b/src/app/components/attribute-dictionary/attribute-dictionary-list/attribute-dictionary-list.component.html
@@ -46,6 +46,6 @@
       </div>
     </div>
   </div>
-  <pagination-controls (pageChange)="page = $event" id="attributeDictionaryPagination"></pagination-controls>
+  <pagination-controls (pageChange)="attributeDictionaryPage = $event" id="attributeDictionaryPagination"></pagination-controls>
 </div>
 <app-log [component]="component"></app-log>
