Create crud forms for connection, attributes, attributes-dictionary and floors Fixes #13

--- a/src/app/components/attribute-dictionary/attribute-dictionary-list/attribute-dictionary-list.component.html
+++ b/src/app/components/attribute-dictionary/attribute-dictionary-list/attribute-dictionary-list.component.html
@@ -20,7 +20,7 @@
                     : {
                         id: 'attributeDictionaryPagination',
                         itemsPerPage: 5,
-                        currentPage: page
+                        currentPage: attributeDictionaryPage
                       }
               ">
               <td>{{ attributeDictionary.id }}</td>
