--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -2,25 +2,21 @@
   <div class="row">
     <div class="col-md-12">
       <h3>Add Attribute Dictionary</h3>
-      <form [formGroup]="addForm" (ngSubmit)="submitForm()">
+      <form [formGroup]="form" (ngSubmit)="submitForm()">
         <div class="form-group mb-3">
           <label for="id" class="form-label">Id</label>
           <input type="text" formControlName="id" id="id" required readonly class="form-control" />
-          <div *ngIf="this.addForm.controls.id.errors" class="invalid-feedback">
-            <div *ngIf="this.addForm.controls.id.errors.required"> Id is required </div>
-            <div *ngIf="this.addForm.controls.id.errors.minlength"> Id must be at least 4 characters </div>
+          <div *ngIf="this.form.controls.id.errors" class="invalid-feedback">
+            <div *ngIf="this.form.controls.id.errors.required"> Id is required </div>
+            <div *ngIf="this.form.controls.id.errors.minlength"> Id must be at least 36 characters </div>
           </div>
         </div>
         <div class="form-group mb-3">
-          <label for="name" class="form-label">Name</label>
-          <textarea [ngClass]="{
-              'is-invalid': this.addForm.controls.name.status != 'VALID',
-              'form-control': true
-            }" formControlName="name" id="name"
-            required >{{ this.addForm.value.name }}</textarea>
-          <div *ngIf="this.addForm.controls.name.errors" class="invalid-feedback">
-            <div *ngIf="this.addForm.controls.name.errors.required"> Attribute name is required </div>
-            <div *ngIf="this.addForm.controls.name.errors.minlength"> Attribute name must be at least 6 characters </div>
+          <label for="value" class="form-label">Value</label>
+          <input formControlName="value" id="value" required />
+          <div *ngIf="this.form.controls.value.errors" class="invalid-feedback">
+            <div *ngIf="this.form.controls.value.errors.required">Value is required </div>
+            <div *ngIf="this.form.controls.value.errors.minlength">Value must be at least 1 characters </div>
           </div>
         </div>
         <div class="row">
@@ -32,11 +28,11 @@
                   {{ typeObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.addForm.controls.category.errors" class="invalid-feedback">
-                <div *ngIf="this.addForm.controls.category.errors.required">Category is required</div>
+              <div *ngIf="this.form.controls.category.errors" class="invalid-feedback">
+                <div *ngIf="this.form.controls.category.errors.required">Category is required</div>
               </div>
               <div>
-              {{ this.toString(this.addForm.controls.category.dirty) }}
+              {{ this.toString(this.form.controls.category.dirty) }}
             </div>
             </div>
           </div>
@@ -52,8 +48,8 @@
                   {{ categoryObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.addForm.controls.category.errors" class="invalid-feedback">
-                <div *ngIf="this.addForm.controls.category.errors.required">Category is required</div>
+              <div *ngIf="this.form.controls.category.errors" class="invalid-feedback">
+                <div *ngIf="this.form.controls.category.errors.required">Category is required</div>
               </div>
             </div>
           </div>
@@ -69,16 +65,16 @@
                   {{ componentObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.addForm.controls.component.errors" class="invalid-feedback">
-                <div *ngIf="this.addForm.controls.component.errors.required">Component is required</div>
+              <div *ngIf="this.form.controls.component.errors" class="invalid-feedback">
+                <div *ngIf="this.form.controls.component.errors.required">Component is required</div>
               </div>
             </div>
           </div>
         </div>
         <div class="form-group mb-3">
-          <button type="submit" [disabled]="!(this.addForm.valid && this.addForm.touched)" class="btn btn-primary"> Add
+          <button type="submit" [disabled]="!(this.form.valid && this.form.touched)" class="btn btn-primary"> Add
             model </button>
-          <div *ngIf="!(this.addForm.valid && this.addForm.touched)" class="invalid-feedback"> Form is invalid </div>
+          <div *ngIf="!(this.form.valid && this.form.touched)" class="invalid-feedback"> Form is invalid </div>
         </div>
       </form>
     </div>
