--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         ariaCurrentWhenActive="page">3d inventory</a>
       <a class="nav-link" routerLink="/home" routerLinkActive="active fluffy" ariaCurrentWhenActive="page">Home</a>
       <a class="nav-link" routerLink="/cube" routerLinkActive="active" ariaCurrentWhenActive="page">Cube</a>
-      <a class="nav-link" routerLink="/devices-list" routerLinkActive="active" ariaCurrentWhenActive="page">Devices</a>
+      <a class="nav-link" routerLink="/device-list" routerLinkActive="active" ariaCurrentWhenActive="page">Devices</a>
       <a class="nav-link" routerLink="/models-list" routerLinkActive="active" ariaCurrentWhenActive="page">Models</a>
       <a class="nav-link" routerLink="/attribute-list" routerLinkActive="active"
         ariaCurrentWhenActive="page">Attributes</a>
