--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -9,10 +9,12 @@
             class="form-control" />
           <div *ngIf="this.formAddAttribute.controls.id.errors"
             class="invalid-feedback">
-            <div *ngIf="this.formAddAttribute.controls.id.errors.required"> Id
-              is required </div>
-            <div *ngIf="this.formAddAttribute.controls.id.errors.minlength"> Id
-              must be at least 36 characters </div>
+            <div *ngIf="this.formAddAttribute.controls.id.errors.required">
+              Id is required
+            </div>
+            <div *ngIf="this.formAddAttribute.controls.id.errors.minlength">
+              Id must be at least 36 characters
+            </div>
           </div>
         </div>
         <div class="form-group mb-3">
@@ -21,71 +23,77 @@
           <div *ngIf="this.formAddAttribute.controls.value.errors"
             class="invalid-feedback">
             <div *ngIf="this.formAddAttribute.controls.value.errors.required">
-              Value is required </div>
+              Value is required
+            </div>
             <div *ngIf="this.formAddAttribute.controls.value.errors.minlength">
-              Value must be at least 1 characters </div>
+              Value must be at least 1 characters
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
-              <label for="type" class="form-label">Type</label>
-              <select (change)="changeType($event)" formControlName="type"
+              <label for="type" class="form-label">Device</label>
+              <select (change)="changeDeviceId($event)" formControlName="type"
                 class="form-control" id="type">
-                <option
-                  *ngFor="let typeObj of deviceTypeDict.list; let i = index">
-                  {{ typeObj.name }}
+                <option *ngFor="let deviceObj of deviceList; let i = index">
+                  {{ deviceObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.formAddAttribute.controls.category.errors"
+              <div *ngIf="this.formAddAttribute.controls.deviceId.errors"
                 class="invalid-feedback">
-                <div
-                  *ngIf="this.formAddAttribute.controls.category.errors.required">
-                  Category is required</div>
+                <div *ngIf="
+                    this.formAddAttribute.controls.deviceId.errors.required
+                  ">
+                  deviceId is required
+                </div>
               </div>
               <div>
-                {{ this.toString(this.formAddAttribute.controls.category.dirty)
+                {{
+                this.toString(this.formAddAttribute.controls.deviceId.dirty)
                 }}
               </div>
             </div>
           </div>
           <div class="col">
             <div class="form-group mb-3">
-              <label for="category" class="form-label">Category</label>
-              <select (change)="changeCategory($event)"
-                formControlName="category" class="form-control" id="category">
+              <label for="modelId" class="form-label">Model Id</label>
+              <select (change)="changeModelId($event)" formControlName="modelId"
+                class="form-control" id="modelId">
                 <option *ngFor="
-                    let categoryObj of deviceCategoryDict.list;
+                    let modelObj of modelList;
                     let i = index
                   ">
-                  {{ categoryObj.name }}
+                  {{ modelObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.formAddAttribute.controls.category.errors"
+              <div *ngIf="this.formAddAttribute.controls.modelId.errors"
                 class="invalid-feedback">
-                <div
-                  *ngIf="this.formAddAttribute.controls.category.errors.required">
-                  Category is required</div>
+                <div *ngIf="
+                    this.formAddAttribute.controls.modelId.errors.required
+                  ">
+                  Model Id is required
+                </div>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="form-group mb-3">
-              <label for="component" class="form-label">Component</label>
-              <select (change)="changeCategory($event)"
-                formControlName="component" class="form-control" id="component">
-                <option *ngFor="
-                    let componentObj of componentDictionary.list;
-                    let i = index
-                  ">
-                  {{ componentObj.name }}
+              <label for="connectionId" class="form-label">Connection Id</label>
+              <select (change)="changeConnectionId($event)"
+                formControlName="connectionId" class="form-control"
+                id="connectionId">
+                <option
+                  *ngFor="let connectionObj of connectionList; let i = index">
+                  {{ connectionObj.id }}
                 </option>
               </select>
-              <div *ngIf="this.formAddAttribute.controls.component.errors"
+              <div *ngIf="this.formAddAttribute.controls.connectionId.errors"
                 class="invalid-feedback">
                 <div
-                  *ngIf="this.formAddAttribute.controls.component.errors.required">
-                  Component is required</div>
+                  *ngIf="this.formAddAttribute.controls.connectionId.errors.required">
+                  Connection Id is required
+                </div>
               </div>
             </div>
           </div>
@@ -93,11 +101,13 @@
         <div class="form-group mb-3">
           <button type="submit"
             [disabled]="!(this.formAddAttribute.valid && this.formAddAttribute.touched)"
-            class="btn btn-primary"> Add
-            model </button>
+            class="btn btn-primary">Add model
+          </button>
           <div
             *ngIf="!(this.formAddAttribute.valid && this.formAddAttribute.touched)"
-            class="invalid-feedback"> Form is invalid </div>
+            class="invalid-feedback">
+            Form is invalid
+          </div>
         </div>
       </form>
     </div>
