--- a/src/app/components/attribute/edit-attribute/edit-attribute.component.html
+++ b/src/app/components/attribute/edit-attribute/edit-attribute.component.html
@@ -7,15 +7,24 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="id" class="form-label">Id</label>
-              <input type="text" formControlName="id" id="id" required readonly
-                class="form-control" />
-              <div *ngIf="this.formEditAttribute.controls.id.errors"
-                class="invalid-feedback">
+              <input
+                type="text"
+                formControlName="id"
+                id="id"
+                required
+                readonly
+                class="form-control"
+              />
+              <div
+                *ngIf="this.formEditAttribute.controls.id.errors"
+                class="invalid-feedback"
+              >
                 <div *ngIf="this.formEditAttribute.controls.id.errors.required">
                   Id is required
                 </div>
                 <div
-                  *ngIf="this.formEditAttribute.controls.id.errors.minlength">
+                  *ngIf="this.formEditAttribute.controls.id.errors.minlength"
+                >
                   Id must be at least 4 characters
                 </div>
               </div>
@@ -25,17 +34,21 @@
             <div class="form-group mb-3">
               <label for="deviceId" class="form-label">Device Id</label>
               <input formControlName="deviceId" id="deviceId" required />{{
-              this.formEditAttribute.value.id
+                this.formEditAttribute.value.id
               }}
-              <div *ngIf="this.formEditAttribute.controls.name.errors"
-                class="invalid-feedback">
+              <div
+                *ngIf="this.formEditAttribute.controls.deviceId.errors"
+                class="invalid-feedback"
+              >
                 <div
-                  *ngIf="this.formEditAttribute.controls.name.errors.required">
+                  *ngIf="this.formEditAttribute.controls.deviceId.errors.required"
+                >
                   Attribute name is required
                 </div>
                 <div
-                  *ngIf="this.formEditAttribute.controls.name.errors.minlength">
-                  Attribute name must be at least 6 characters
+                  *ngIf="this.formEditAttribute.controls.deviceId.errors.minlength"
+                >
+                  Device Id name must be at least 6 characters
                 </div>
               </div>
             </div>
@@ -44,61 +57,73 @@
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
-              <label for="modelId" class="form-label">Type</label>
-              <select (change)="changeModelId($event)" formControlName="type"
-                class="form-control" id="type">
-                <option
-                  *ngFor="let typeObj of deviceTypeDict.list; let i = index">
-                  {{ typeObj.name }}
+              <label for="modelId" class="form-label">Model Id</label>
+              <select
+                (change)="changeModelId($event)"
+                formControlName="type"
+                class="form-control"
+                id="type"
+              >
+                <option *ngFor="let modelObj of modelDictionary; let i = index">
+                  {{ modelObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.formEditAttribute.controls.category.errors"
-                class="invalid-feedback">
-                <div *ngIf="
-                    this.formEditAttribute.controls.category.errors.required
-                  ">
+              <div *ngIf="this.formEditAttribute.controls.modelId.errors" class="invalid-feedback">
+                <div *ngIf="this.formEditAttribute.controls.modelId.errors.required">
                   Category is required
                 </div>
               </div>
               <div>
-                {{
-                this.toString(this.formEditAttribute.controls.category.dirty)
-                }}
+                {{ this.toString(this.formEditAttribute.controls.modelId.value) }}
               </div>
             </div>
           </div>
           <div class="col">
             <div class="form-group mb-3">
-              <label for="category" class="form-label">Category</label>
-              <select (change)="changeCategory($event)"
-                formControlName="category" class="form-control" id="category">
-                <option *ngFor="
-                    let categoryObj of deviceCategoryDict.list;
-                    let i = index
-                  ">
-                  {{ categoryObj.name }}
+              <label for="deviceId" class="form-label">Device Id</label>
+              <select
+                (change)="changeDeviceId($event)"
+                formControlName="deviceId"
+                class="form-control"
+                id="deviceId"
+              >
+                <option
+                  *ngFor="let deviceObj of deviceDictionary; let i = index"
+                >
+                  {{ deviceObj.name }}
                 </option>
               </select>
-              <div *ngIf="this.formEditAttribute.controls.category.errors"
-                class="invalid-feedback">
-                <div *ngIf="
-                    this.formEditAttribute.controls.category.errors.required
-                  ">
-                  Category is required
+              <div
+                *ngIf="this.formEditAttribute.controls.deviceId.errors"
+                class="invalid-feedback"
+              >
+                <div
+                  *ngIf="
+                    this.formEditAttribute.controls.deviceId.errors.required
+                  "
+                >
+                  deviceId is required
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="form-group mb-3">
-          <button type="submit" [disabled]="
+          <button
+            type="submit"
+            [disabled]="
               !(this.formEditAttribute.valid && this.formEditAttribute.touched)
-            " class="btn btn-primary">
+            "
+            class="btn btn-primary"
+          >
             Update
           </button>
-          <div *ngIf="
+          <div
+            *ngIf="
               !(this.formEditAttribute.valid && this.formEditAttribute.touched)
-            " class="invalid-feedback">
+            "
+            class="invalid-feedback"
+          >
             Form is invalid
           </div>
         </div>
@@ -106,4 +131,4 @@
     </div>
   </div>
 </div>
-<app-log [component]="componentLog"></app-log>
+<app-log [component]="component"></app-log>
