--- a/src/app/components/models/add-model/add-model.component.html
+++ b/src/app/components/models/add-model/add-model.component.html
@@ -5,20 +5,14 @@
       <form [formGroup]="form" (ngSubmit)="submitForm()">
         <div class="form-group mb-3">
           <label for="form-id" class="form-label">Id</label>
-          <input
-            type="text"
-            formControlName="id"
-            id="form-id"
-            maxlength="20"
-            minlength="1"
-            required
-            [ngClass]="{
+          <input type="text" formControlName="id" id="form-id" maxlength="20"
+            minlength="1" required [ngClass]="{
               'is-invalid': this.form.controls.id.status != 'VALID',
               'form-control': true
-            }"
-          />
+            }" />
           <div *ngIf="this.form.controls.id.errors" class="invalid-feedback">
-            <div *ngIf="this.form.controls.id.errors.required">Id is required</div>
+            <div *ngIf="this.form.controls.id.errors.required">Id is required
+            </div>
             <div *ngIf="this.form.controls.id.errors.minlength">
               Id must be at least 4 characters
             </div>
@@ -30,22 +24,12 @@
         </div>
         <div class="form-group mb-3">
           <label for="form-name" class="form-label">Name</label>
-          <textarea
-            [ngClass]="{
+          <textarea [ngClass]="{
               'is-invalid': this.form.controls.name.status != 'VALID',
               'form-control': true
-            }"
-            formControlName="name"
-            rows="2"
-            minlength="4"
-            id="form-name"
-            maxlength="50"
-            >{{ form.value.name }}</textarea
-          >
-          <div
-            *ngIf="this.form.controls.name.errors"
-            class="invalid-feedback"
-          >
+            }" formControlName="name" rows="2" minlength="4" id="form-name"
+            maxlength="50">{{ form.value.name }}</textarea>
+          <div *ngIf="this.form.controls.name.errors" class="invalid-feedback">
             <div *ngIf="this.form.controls.name.errors.required">
               Name is required
             </div>
@@ -58,38 +42,25 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="width" class="form-label">Width</label>
-              <input
-                type="text"
-                formControlName="width"
-                id="width"
-                maxlength="6"
-                minlength="1"
-                required
-                [ngClass]="{
+              <input type="text" formControlName="width" id="width"
+                maxlength="6" minlength="1" required [ngClass]="{
                   'is-invalid':
                     this.form.controls.dimension.controls.width.status !=
                     'VALID',
                   'form-control': true
-                }"
-              />
-              <div
-                *ngIf="this.form.controls.dimension.controls.width.errors"
-                class="invalid-feedback"
-              >
-                <div
-                  *ngIf="
+                }" />
+              <div *ngIf="this.form.controls.dimension.controls.width.errors"
+                class="invalid-feedback">
+                <div *ngIf="
                     this.form.controls.dimension.controls.width.errors
                       .required
-                  "
-                >
+                  ">
                   Width is required
                 </div>
-                <div
-                  *ngIf="
+                <div *ngIf="
                     this.form.controls.dimension.controls.width.errors
                       .minlength
-                  "
-                >
+                  ">
                   Width must be at least 1 number.
                 </div>
               </div>
@@ -102,38 +73,25 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="heigth" class="form-label">Height</label>
-              <input
-                type="text"
-                formControlName="height"
-                id="heigth"
-                maxlength="6"
-                minlength="1"
-                required
-                [ngClass]="{
+              <input type="text" formControlName="height" id="heigth"
+                maxlength="6" minlength="1" required [ngClass]="{
                   'is-invalid':
                     this.form.controls.dimension.controls.height.status !=
                     'VALID',
                   'form-control': true
-                }"
-              />
-              <div
-                *ngIf="this.form.controls.dimension.controls.height.errors"
-                class="invalid-feedback"
-              >
-                <div
-                  *ngIf="
+                }" />
+              <div *ngIf="this.form.controls.dimension.controls.height.errors"
+                class="invalid-feedback">
+                <div *ngIf="
                     this.form.controls.dimension.controls.height.errors
                       .required
-                  "
-                >
+                  ">
                   Height is required
                 </div>
-                <div
-                  *ngIf="
+                <div *ngIf="
                     this.form.controls.dimension.controls.height.errors
                       .minlength
-                  "
-                >
+                  ">
                   Height must be at least 1 number
                 </div>
               </div>
@@ -146,37 +104,24 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="depth" class="form-label">Depth</label>
-              <input
-                type="text"
-                formControlName="depth"
-                id="depth"
-                maxlength="4"
-                minlength="1"
-                required
-                [ngClass]="{
+              <input type="text" formControlName="depth" id="depth"
+                maxlength="4" minlength="1" required [ngClass]="{
                   'is-invalid':
                     this.form.controls.dimension.status != 'VALID',
                   'form-control': true
-                }"
-              />
-              <div
-                *ngIf="this.form.controls.dimension.controls.depth.errors"
-                class="invalid-feedback"
-              >
-                <div
-                  *ngIf="
+                }" />
+              <div *ngIf="this.form.controls.dimension.controls.depth.errors"
+                class="invalid-feedback">
+                <div *ngIf="
                     this.form.controls.dimension.controls.depth.errors
                       .required
-                  "
-                >
+                  ">
                   Depth is required
                 </div>
-                <div
-                  *ngIf="
+                <div *ngIf="
                     this.form.controls.dimension.controls.depth.errors
                       .minlength
-                  "
-                >
+                  ">
                   Depth must be at least 1 number
                 </div>
               </div>
@@ -191,34 +136,18 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="front" class="form-label">Front</label>
-              <input
-                type="text"
-                formControlName="front"
-                id="front"
-                [ngClass]="{
-                  'is-invalid':
-                    this.form.controls.texture.controls.front.status !=
-                    'VALID',
-                  'form-control': true
-                }"
-              />
-              <div
-                *ngIf="this.form.controls.texture.controls.front.errors"
-                class="invalid-feedback"
-              >
-                <div
-                  *ngIf="
+              <input type="text" formControlName="front" id="front" />
+              <div *ngIf="this.form.controls.texture.controls.front.errors"
+                class="invalid-feedback">
+                <div *ngIf="
                     this.form.controls.texture.controls.front.errors.required
-                  "
-                >
+                  ">
                   Width is required
                 </div>
-                <div
-                  *ngIf="
+                <div *ngIf="
                     this.form.controls.texture.controls.front.errors
                       .minlength
-                  "
-                >
+                  ">
                   Width must be at least 1 number.
                 </div>
               </div>
@@ -231,33 +160,17 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="back" class="form-label">Back</label>
-              <input
-                type="text"
-                formControlName="back"
-                id="back"
-                [ngClass]="{
-                  'is-invalid':
-                    this.form.controls.texture.controls.back.status !=
-                    'VALID',
-                  'form-control': true
-                }"
-              />
-              <div
-                *ngIf="this.form.controls.texture.controls.back.errors"
-                class="invalid-feedback"
-              >
-                <div
-                  *ngIf="
+              <input type="text" formControlName="back" id="back"  />
+              <div *ngIf="this.form.controls.texture.controls.back.errors"
+                class="invalid-feedback">
+                <div *ngIf="
                     this.form.controls.texture.controls.back.errors.required
-                  "
-                >
+                  ">
                   back side is required
                 </div>
-                <div
-                  *ngIf="
+                <div *ngIf="
                     this.form.controls.texture.controls.back.errors.minlength
-                  "
-                >
+                  ">
                   back must be at least 1 number
                 </div>
               </div>
@@ -270,31 +183,17 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="depth" class="form-label">Side</label>
-              <input
-                type="text"
-                formControlName="side"
-                id="side"
-                [ngClass]="{
-                  'is-invalid': this.form.controls.texture.status != 'VALID',
-                  'form-control': true
-                }"
-              />
-              <div
-                *ngIf="this.form.controls.texture.controls.side.errors"
-                class="invalid-feedback"
-              >
-                <div
-                  *ngIf="
+              <input type="text" formControlName="side" id="side" />
+              <div *ngIf="this.form.controls.texture.controls.side.errors"
+                class="invalid-feedback">
+                <div *ngIf="
                     this.form.controls.texture.controls.side.errors.required
-                  "
-                >
+                  ">
                   side is required
                 </div>
-                <div
-                  *ngIf="
+                <div *ngIf="
                     this.form.controls.texture.controls.side.errors.minlength
-                  "
-                >
+                  ">
                   side must be at least 1 number
                 </div>
               </div>
@@ -307,21 +206,9 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="top" class="form-label">Top</label>
-              <input
-                type="text"
-                formControlName="top"
-                id="top"
-                [ngClass]="{
-                  'is-invalid':
-                    this.form.controls.texture.controls.top.status !=
-                    'VALID',
-                  'form-control': true
-                }"
-              />
-              <div
-                *ngIf="this.form.controls.texture.controls.side.errors"
-                class="invalid-feedback"
-              >
+              <input type="text" formControlName="top" id="top" />
+              <div *ngIf="this.form.controls.texture.controls.side.errors"
+                class="invalid-feedback">
                 <div *ngIf="this.form.controls.texture.controls.top.errors">
                   Top is required
                 </div>
@@ -338,32 +225,18 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="botom" class="form-label">Botom</label>
-              <input
-                type="text"
-                formControlName="botom"
-                id="botom"
-                [ngClass]="{
-                  'is-invalid': this.form.controls.texture.status != 'VALID',
-                  'form-control': true
-                }"
-              />
-              <div
-                *ngIf="this.form.controls.texture.controls.botom.errors"
-                class="invalid-feedback"
-              >
-                <div
-                  *ngIf="
+              <input type="text" formControlName="botom" id="botom"  />
+              <div *ngIf="this.form.controls.texture.controls.botom.errors"
+                class="invalid-feedback">
+                <div *ngIf="
                     this.form.controls.texture.controls.botom.errors.required
-                  "
-                >
+                  ">
                   Botom is required
                 </div>
-                <div
-                  *ngIf="
+                <div *ngIf="
                     this.form.controls.texture.controls.botom.errors
                       .minlength
-                  "
-                >
+                  ">
                   Botom must be at least 2 characters
                 </div>
               </div>
@@ -378,15 +251,10 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="form-type" class="form-label">Type</label>
-              <select
-                (change)="changeType($event)"
-                formControlName="type"
-                class="form-control"
-                id="form-type"
-              >
+              <select (change)="changeType($event)" formControlName="type"
+                class="form-control" id="form-type">
                 <option
-                  *ngFor="let typeObj of deviceTypeDict.list; let i = index"
-                >
+                  *ngFor="let typeObj of deviceTypeDict.list; let i = index">
                   {{ typeObj.name }}
                 </option>
               </select>
@@ -395,18 +263,13 @@
           <div class="col">
             <div class="form-group mb-3">
               <label for="form-category" class="form-label">Category</label>
-              <select
-                (change)="changeCategory($event)"
-                formControlName="category"
-                class="form-control"
-                id="form-category"
-              >
-                <option
-                  *ngFor="
+              <select (change)="changeCategory($event)"
+                formControlName="category" class="form-control"
+                id="form-category">
+                <option *ngFor="
                     let categoryObj of deviceCategoryDict.list;
                     let i = index
-                  "
-                >
+                  ">
                   {{ categoryObj.name }}
                 </option>
               </select>
@@ -414,23 +277,14 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <button
-            type="submit"
-            [disabled]="!(form.valid && form.touched)"
-            class="btn btn-primary"
-          >
+          <button type="submit" [disabled]="!(form.valid && form.touched)"
+            class="btn btn-primary">
             Add model
           </button>
-          <div
-            *ngIf="!(form.valid && form.touched)"
-            class="-valid-feedback"
-          >
+          <div *ngIf="!(form.valid && form.touched)" class="-valid-feedback">
             Form is invalid
           </div>
-          <div
-            *ngIf="form.valid && form.touched"
-            class="-invalid-feedback"
-          >
+          <div *ngIf="form.valid && form.touched" class="-invalid-feedback">
             Form is valid
           </div>
           <p>Form Status: {{ form.status }}</p>
@@ -440,4 +294,3 @@
     </div>
   </div>
 </div>
-<app-log></app-log>
